fix first row uneven border

--- a/sass/shortcodes/_json_to_table.scss
+++ b/sass/shortcodes/_json_to_table.scss
@@ -31,7 +31,7 @@
 
   .json-table tbody tr:first-child td {
     border-bottom: 0.01rem solid #ddd;
-    border-top: 2px solid;
+    border-top: 0.1rem solid;
     border-top-color: var(--rc-bold_border);
   }
 
